# ct-lang

./: .gitignore  CHANGELOG.md  Notes.org  README.md  ct-lang.cabal  flake.nix  shell.nix
app/: Main.hs
ct-lang/: Cargo.toml
ct-lang/src/: error_reporting.rs  eval.rs  interp.rs  lex.rs  lib.rs  main.rs  parse.rs  parser.rs  parsing.rs  repl.rs  translating.rs
examples/: conditions.ct  fib.ct  fizzbuzz.ct  lists.ct  primes.ct  tree.ct
src/CTLang/: AST.hs  Eval.hs
syntax-highlighting/: ct-mode.el
