[package]
name = "ct"
version = "0.1.0"
authors = ["Amat Gil <amatgilvinyes@gmail.com>"]
description = "Compiler for Ç-lang"
repository = "https://github.com/amatgil/ct-lang"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"

[dependencies]
anyhow = "1.0.83"
nom = "7.1.3"
regex = "1.10.4"
thiserror = "1.0.60"
